  by 'set' method.
* **New:** Hierarchical names of the task are added to Task Tool Tip window.
* **New:** Hierarchical names of the task are added to Create/Update TimeLog
  dialog.
* **New:** It is now possible to duplicate a task hierarchy in gantt chart now.
* **Update:** In the summary page of Task update dialog is called based on
  task entity type.
* **New:** Update Asset MenuItem is added to right click menu on assets list row.
* **Update:** In Update Asset Dialog 'code' attribute is enabled to edit.
* **New:** Update Shot MenuItem is added to right click menu on shots list row.
* **Update:** In Update Shot Dialog 'code' attribute is enabled to edit.
* **New:** Update Sequence MenuItem is added to right click menu on sequences
    list row.
* **Update:** In Update Sequence Dialog 'code' attribute is enabled to edit.
* **Fix:** In Update Asset Dialog type attribute is set with value that is set
    before.
* **Fix:** Based on user permissions Studio menu is redefined.
* **jQueryGantt:**

  * **New:** The parent elements in gantt chart is now collapsible.
  * **Update:** Updated the CSS.
  * **New:** All the different types of elements in GridEditor (Project, Task,
    Asset, Shot, Sequence) are now drawn with different background colors.
  * **New:** Thickened the ganttLines to become the background element for
    TaskBars also they are now in the same class with the Grid elements and
    thus have the same bg color.
  * **Update:** Week zoom now shows the day number instead of the first letter
    of the day.

pre 0.1.0.b1
============

* **Update:** All the date values are now returned as **UTC String** and
  stored in database as UTC datetime thus Stalker now supports Time Zones.
* **Fix:** Fixed all the dialogs with TimeTextBox inputs, where the
  date portion was reset to epoch by the widget itself, causing a change in
  Day Light Saving of the users locale and the dialog was reporting wrong