@@ -31,9 +31,9 @@
           href='{{ request.static_url("stalker_pyramid:static/stalker/css/stalker.css") }}'/>
 
     {# load jQuery and jQuery Gantt first#}
-    <link rel=stylesheet media='all'
-          href='{{ request.static_url("stalker_pyramid:static/jQueryGantt/libs/dateField/jquery.dateField.css") }}'
-          type="text/css">
+{#    <link rel=stylesheet media='all'#}
+{#          href='{{ request.static_url("stalker_pyramid:static/jQueryGantt/libs/dateField/jquery.dateField.css") }}'#}
+{#          type="text/css">#}
     <link rel=stylesheet media='all'
           href='{{ request.static_url("stalker_pyramid:static/jQueryGantt/css/gantt.css") }}'
           type="text/css">
@@ -50,7 +50,7 @@
     <script src='{{ request.static_url("stalker_pyramid:static/jQueryGantt/libs/platform.js") }}'></script>
     <script src='{{ request.static_url("stalker_pyramid:static/jQueryGantt/libs/date.js") }}'></script>
     <script src='{{ request.static_url("stalker_pyramid:static/jQueryGantt/libs/i18nJs.js") }}'></script>
-    <script src='{{ request.static_url("stalker_pyramid:static/jQueryGantt/libs/dateField/jquery.dateField.js") }}'></script>
+{#    <script src='{{ request.static_url("stalker_pyramid:static/jQueryGantt/libs/dateField/jquery.dateField.js") }}'></script>#}
     <script src='{{ request.static_url("stalker_pyramid:static/jQueryGantt/libs/JST/jquery.JST.js") }}'></script>
 
     <script src='{{ request.static_url("stalker_pyramid:static/jQueryGantt/ganttUtilities.js") }}'></script>
