@@ -17,7 +17,8 @@ Stalker Pyramid Changes
 * **New:** It is now possible to duplicate a task hierarchy in gantt chart now.
 * **Update:** In the summary page of Task update dialog is called based on
   task entity type.
-* **New:** Update Asset MenuItem is added to right click menu on assets list row.
+* **New:** Update Asset MenuItem is added to right click menu on assets list
+  row.
 * **Update:** In Update Asset Dialog 'code' attribute is enabled to edit.
 * **New:** Update Shot MenuItem is added to right click menu on shots list row.
 * **Update:** In Update Shot Dialog 'code' attribute is enabled to edit.
@@ -38,6 +39,7 @@ Stalker Pyramid Changes
     thus have the same bg color.
   * **Update:** Week zoom now shows the day number instead of the first letter
     of the day.
+  * **Update:** Removed dateField.js.
 
 pre 0.1.0.b1
 ============
